--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deploy-azure-cdn",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A package that copies files to Azure CDN. Can be used as gulp task.",
   "main": "index.js",
   "repository": {
@@ -27,10 +27,10 @@
   "homepage": "https://github.com/bestander/deploy-azure-cdn",
   "dependencies": {
     "async": "^2.1.2",
-    "azure-storage": "^1.3.1",
+    "azure-storage": "2.10.1",
     "mime": "^1.3.4",
     "node.extend": "^1.1.6",
-    "q": "^1.4.1"
+    "q": "^1.5.1"
   },
   "devDependencies": {
     "jest-cli": "^0.1.18"
